# gh-ranking

./: Cargo.toml  README.md
.github/workflows/: release.yml
script/: build.sh
src/: graphql.rs  main.rs  output.rs
