[package]
name = "gh-ranking"
version = "0.1.0"
edition = "2021"
description = "Show in-organization ranking of GitHub activities such as review count."
repository = "https://github.com/yukukotani/gh-ranking"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"